ghc-4335c07/testsuite/tests/partial-sigs/should_compile/PatBind2.hs
{-# LANGUAGE PartialTypeSignatures #-}
module PatBind2 where

foo :: Bool -> _
Just foo = Just id
