ghc-4335c07/testsuite/tests/partial-sigs/should_fail/UnnamedConstraintWildcard1.hs
{-# LANGUAGE PartialTypeSignatures #-}
module UnnamedConstraintWildcard1 where

foo :: Show _ => a -> String
foo x = show x
